--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=U2-W1-D5-Gest-Pren-Test
+
+# Postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/U2-W1-D5
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
